--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ section { width:700px; margin:10px auto; }
 #status.error   { background:#FF6347; }
 #response { margin:10px 0; }
 #response table { width:100%; }
-#response th { background:#DDD; }
-#response td { border-bottom:solid 1px #DDD; }
+#response th { background:#DDD; padding:5px 15px; }
+#response td { border-bottom:solid 1px #DDD; padding:5px 15px; }
